# spider-animation

./: package-lock.json  package.json  webpack.config.js
graphics-lib/: Cargo.toml  version_1.txt
graphics-lib/code_versions/: event.txt  version_3.txt  version_4.txt  version_5.txt
graphics-lib/src/: camera.rs  constants.rs  data_structures.rs  gpu_interface.rs  leg.rs  lib.rs  m4.rs  matrix_stack.rs  setup.rs  setup_ui_control.rs  spider.rs  version_2.txt  webgl_utils.rs
graphics-lib/src/modules/: mod.rs
graphics-lib/src/modules/geometry/: geometry.rs  mod.rs
graphics-lib/src/modules/m4/: m4.rs  mod.rs
graphics-lib/src/programs/: base.rs
graphics-lib/src/shaders/fragment/: base.rs  base_2.rs
graphics-lib/src/shaders/vertex/: base.rs  base_2.rs  mod.rs
src/: App.js  index.js  styles.js
