[package]
name = "graphics-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.19"
console_error_panic_hook = "0.1.5"
quad-rand = "0.2.1"
nalgebra = "0.32.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlUniformLocation',
  'WebGlTexture',
  'EventTarget',
  'MouseEvent',
  'KeyboardEvent'
]